# Webinar

./: Pandapower_6_zbiralk.ipynb  Pandapower_OPF_Analiza.ipynb  README.md  Simulacija_Temperatura.ipynb  gui_temperatura.py  meritve.csv  meritve_notebook.csv  optimizacija_obremenitev.py  osnoven_primer.py  podatkovni_tipi.py  pyproject.toml  requirements.txt  simulacija_temperatur.py
